# ylo-2

./: .gitmodules  README.md  tips.md
Devantech_SRF10/: README.md
Mjbots/: README.md
Mjbots/python_code/: PcanTransport.py  Untitled-1.py  Zero_legs.py  config_servos.py  moteus_rezero_tool.py  power_module.py
Myahrs+/: README.md
Myahrs+/C++_tests/myahrs+/: README.md  elpimous_test_myahrs+  makefile  myahrs+_elpimous.cpp
Myahrs+/C++_tests/myahrs+/backup/: myahrs+_elpimous.cpp  myahrs_plus_example.cpp
Peak4can/: README.md
Peak4can/ylo2_library/ylo2_moteus/: CMakeLists.txt  package.xml
Peak4can/ylo2_library/ylo2_moteus/include/moteus_pcan/: PCANDevice.h  definitions.h  moteus_pcan_controller.h  moteus_pcan_interface.h  moteus_pcan_motor.h  pcan_to_moteus.hpp
Peak4can/ylo2_library/ylo2_moteus/src/: ylo2_moteus_node.cpp
Peak4can/ylo2_library/ylo2_moteus/src/moteus_pcan/: CANDevice.cpp  moteus_pcan_controller.cpp  moteus_pcan_interface.cpp  moteus_pcan_motor.cpp  utils.cpp
ROS/: tips.md
ROS/Robot/ylo2_description/meshes/: abduct_fl_resized.stl  shank_fl_resized.stl  thigh_fl_resized.stl  toe_fl_resized.stl
ROS/Robot/ylo2_description/robots/: ylo2.urdf.xacro
ROS/Robot/ylo2_description/rviz/: ylo2_wbc.rviz
ROS/Robot/ylo2_description/urdfs/: const.xacro  leg.xacro
ROS/Robot/ylo2_xacro_model/ylo2_urdf_2022_description/: CMakeLists.txt  package.xml
ROS/wolf_descriptions-master/: .gitignore  README.md
ROS/wolf_descriptions-master/aliengo_description/params/: aliengo_kinova_params.yaml
ROS/wolf_descriptions-master/aliengo_description/plotjuggler/: aliengo.xml
ROS/wolf_descriptions-master/aliengo_description/robots/: aliengo.srdf.xacro
ROS/wolf_descriptions-master/aliengo_description/urdfs/: leg.xacro
ROS/wolf_descriptions-master/anymal_description/: package.xml
ROS/wolf_descriptions-master/anymal_description/params/: anymal_params.yaml
ROS/wolf_descriptions-master/anymalc_description/: CMakeLists.txt  package.xml
ROS/wolf_descriptions-master/anymalc_description/robots/: anymalc.srdf.xacro
ROS/wolf_descriptions-master/hyq_description/: package.xml
ROS/wolf_descriptions-master/hyq_description/plotjuggler/: hyq.xml
ROS/wolf_descriptions-master/hyq_description/robots/: hyq_kinova.srdf.xacro  hyq_teleop.srdf.xacro
ROS/wolf_descriptions/aliengo_description/: CMakeLists.txt  package.xml
ROS/wolf_descriptions/anymal_description/: CMakeLists.txt
ROS/wolf_descriptions/hyq_description/: CMakeLists.txt
ROS/wolf_descriptions/minicheetah_description/: CMakeLists.txt  package.xml
ROS/wolf_descriptions/minicheetah_description/robots/: minicheetah.urdf.xacro
ROS/wolf_descriptions/solo_description/: CMakeLists.txt
ROS/wolf_descriptions/solo_description/plotjuggler/: solo.xml
ROS/wolf_descriptions/solo_description/robots/: solo.srdf.xacro
ROS/wolf_descriptions/solo_description/urdfs/: leg.xacro
ROS/wolf_descriptions/spot_description/: model.sdf
ROS/wolf_descriptions/wolf_description_utils/: package.xml
ROS/wolf_descriptions/wolf_description_utils/launch/: standalone.launch  world.launch
ROS/wolf_descriptions/wolf_description_utils/urdfs/: leg.gazebo.xacro  leg.transmission.xacro
Realsense_cameras/: README.md  realsense.md
Respeaker4mic/: README.md  respeaker.md.txt
Rplidar A2/: README.md
UBUNTU/: README.md  tips.2md  tips.md
UP-Xtreme/: README.md  another RT kernel patch  another_RT_kernel_tuto.md
Wolf_for_ylo2/k3lso_moteus/: CMakeLists.txt  README.md  package.xml
Wolf_for_ylo2/k3lso_moteus/include/moteus_pcan/: PCANDevice.h  moteus_pcan_controller.h  moteus_pcan_interface.h  moteus_pcan_motor.h  utils.h
Wolf_for_ylo2/k3lso_moteus/src/: k3lso_moteus_node.cpp
Wolf_for_ylo2/k3lso_moteus/src/moteus_pcan/: PCANDevice.cpp  moteus_pcan_controller.cpp  moteus_pcan_interface.cpp  moteus_pcan_motor.cpp
Wolf_for_ylo2/simu_videos/: 004-2022-02-03_23.21.42.mkv
Wolf_for_ylo2/wolf_descriptions/sensors_description/: CMakeLists.txt  package.xml
Wolf_for_ylo2/wolf_descriptions/solo_description/: package.xml
Wolf_for_ylo2/wolf_descriptions/solo_description/meshes/stl/with_foot/: solo_foot_simple.stl
Wolf_for_ylo2/wolf_descriptions/solo_description/params/: solo_params.yaml
Wolf_for_ylo2/wolf_descriptions/solo_description/robots/: solo.urdf.xacro
Wolf_for_ylo2/wolf_descriptions/solo_description/rviz/: solo_wbc.rviz
Wolf_for_ylo2/wolf_descriptions/spot_description/: CMakeLists.txt  model.config  package.xml
Wolf_for_ylo2/wolf_descriptions/wolf_description_utils/: CMakeLists.txt
Wolf_for_ylo2/wolf_descriptions/wolf_description_utils/launch/: upload.launch
Wolf_for_ylo2/wolf_descriptions/wolf_description_utils/scripts/: go0
Wolf_for_ylo2/wolf_descriptions/wolf_description_utils/urdfs/: gazebo.urdf.xacro
Wolf_for_ylo2/wolf_ylo2_interface/: CMakeLists.txt  README.md  package.xml
Wolf_for_ylo2/wolf_ylo2_interface/include/wolf_ylo2_interface/: ylo2_robot_hw.hpp  ylo2_ros_control.hpp
Wolf_for_ylo2/wolf_ylo2_interface/src/: ylo2_robot_hw.cpp  ylo2_ros_control.cpp  ylo2_ros_node.cpp
Wolf_for_ylo2/wolf_ylo2_interface/ylo2_moteus_controller/include/: moteus_controller.hpp
champ_for_ylo2/champ/champ_base/: CMakeLists.txt
champ_for_ylo2/champ_base/: CMakeLists.txt
champ_for_ylo2/champ_base/include/: quadruped_controller.h
champ_for_ylo2/champ_base/src/: YloTwoPcanToMoteus.cpp  quadruped_controller.cpp
champ_for_ylo2/ylo2_config/: CMakeLists.txt  README.md  config.json  package.xml
champ_for_ylo2/ylo2_config/include/: quadruped_description.h
champ_for_ylo2/ylo2_config/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
champ_for_ylo2/ylo2_description/: CMakeLists.txt
champ_for_ylo2/ylo2_description/launch/: controller.yaml  display.launch  urdf.rviz
champ_for_ylo2/ylo2_description/robots/: ylo2.urdf  ylo2.urdf.xacro
champ_for_ylo2/ylo2_description/rviz/: ylo2_wbc.rviz
moteus_driver/: CMakeLists.txt  ZeroPosition  readme.md
moteus_driver/include/moteus_driver/: YloTwoPcanToMoteus.hpp
moteus_driver/src/: YloTwoPcanToMoteus.cpp  ZeroPosition.cpp
(+100 files in other folders)
