<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>k3lso_moteus</name>
  <version>0.1.0</version>
  <description>
    Moteus drivers package for K3lso robot.
  </description>
  <author email="camilo.im93@gmail.com">Camilo Camacho</author>
  <maintainer email="camilo.im93@gmail.com">Camilo Camacho</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
