<?xml version="1.0"?>
<package format="2">
  <name>wolf_ylo2_interface</name>
  <version>0.0.1</version>
  <description>
      Hardware Abstraction Layer for ylo2 robot to be used with WoLF - Whole Whole-body Locomotion Framework
      available at https://github.com/graiola/wolf-setup
  </description>
  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>realtime_tools</depend>
  <depend>controller_manager</depend>
  <depend>wolf_hardware_interface</depend>

  <!-- <test_depend>rostest</test_depend> -->

</package>
