<package>
  <name>hyq_description</name>
  <version>0.0.1</version>
  <description>
	This package contains the description (mechanical, kinematic, visual,
  etc.) of the HyQ robot. The files in this package are parsed and used by
  a variety of other components.
  </description>
  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>Apache License 2.0</license>

  <author>Carlos Mastalli</author>
  <author>Ioannis Havoutis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>

</package>

