<?xml version="1.0"?>
<package format="2">
  <name>minicheetah_description</name>
  <version>0.0.1</version>
  <description>Minicheetah description Package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>ToDo</author>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

</package>
